🎨 Fix scrollbars

--- a/client/src/ui-library/Tabs/Tabs.module.scss
+++ b/client/src/ui-library/Tabs/Tabs.module.scss
@@ -2,7 +2,11 @@
 
 // Tabs List
 .tabsList {
-  @apply flex gap-2;
+  @apply flex gap-2 overflow-x-auto;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 // Tab
